# rust-fellowsjip

./: .env.example  .gitignore  CLOUD_DEPLOYMENT_GUIDE.md  Cargo.toml  DEPLOYMENT_OPTIONS.md  Dockerfile  ORACLE_FREE_GUIDE.md  REFACTORING_SUMMARY.md  deploy_to_ec2.sh  readme.md  setup_ngrok.sh
examples/: actix_example.rs  simple_text.rs
src/: config.rs  lib.rs  main.rs  middleware.rs  types.rs  utils.rs
src/handlers/: info.rs  keypair.rs  message.rs  mod.rs  token.rs  transfer.rs
tests/: integration_tests.rs
