[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Solana HTTP server built with Rust"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.3"
solana-client = "2.3"
spl-token = { version = "8.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0", features = ["no-entrypoint"] }
bs58 = "0.5.1"
base64 = "0.22.1"
