[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana dependencies (for instruction creation, no RPC)
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Cryptography
ed25519-dalek = "1.0"
rand = "0.7"
bs58 = "0.5"
base64 = "0.21"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
